[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["nishimurakai <nishimura.kai@jp.panasonic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
